cmake_minimum_required(VERSION 3.28)
project(aic LANGUAGES C)
set(CMAKE_C_STANDARD 90)

# Chapter 1
add_executable(prog1_1)
target_sources(prog1_1 PRIVATE src/ch1/prog1_1.c)
add_executable(prog1_2)
target_sources(prog1_2 PRIVATE src/ch1/prog1_2.c)
add_executable(prog1_3)
target_sources(prog1_3 PRIVATE src/ch1/prog1_3.c)
add_executable(prog1_4)
target_sources(prog1_4 PRIVATE src/ch1/prog1_4.c)
add_executable(ex1_16)
target_sources(ex1_16 PRIVATE src/ch1/ex1_16.c)
