add_executable(ex511 ex5.1.1.c)
add_executable(ex513 ex5.1.3.c)
add_executable(ex519 ex5.1.9.c)
add_executable(quicksort quicksort.c)
add_executable(ex528 ex5.2.8.c)
target_include_directories(ex528 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
target_link_libraries(ex528 PUBLIC common)
add_executable(ex529 ex5.2.9.c)
target_include_directories(ex529 PUBLIC "${PROJECT_SOURCE_DIR}/src/includes")
target_link_libraries(ex529 PUBLIC common)
add_executable(ex533 ex5.3.3.c)
